correction of button style overlap

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -104,21 +104,21 @@ a:hover {
 }
 
 /* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: #f1f1f1;
-  cursor: pointer;
-}
+// .btn {
+//   border: none;
+//   outline: none;
+//   padding: 12px 16px;
+//   background-color: #f1f1f1;
+//   cursor: pointer;
+// }
 
-/* Add a light grey background on mouse-over */
-.btn:hover {
-  background-color: #ddd;
-}
+// /* Add a light grey background on mouse-over */
+// .btn:hover {
+//   background-color: #ddd;
+// }
 
-/* Add a dark background to the active button */
-.btn.active {
-  background-color: rgb(184, 28, 28);
-  color: white;
-}
+// /* Add a dark background to the active button */
+// .btn.active {
+//   background-color: rgb(184, 28, 28);
+//   color: white;
+// }
